creation of a abstract Entity class in framework

--- a/config/dev.ini
+++ b/config/dev.ini
@@ -1,7 +1,7 @@
 ; Configuration pour le développement
 
 [Installation]
-racineWeb = /blog/OC_Projet5/
+racineWeb = /OC_Projet5/OC_Projet5/
 
 [DB]
 dsn = 'mysql:host=localhost;dbname=projet_5_blog;charset=utf8'
