--- a/config/dev.ini
+++ b/config/dev.ini
@@ -4,6 +4,6 @@
 racineWeb = /OC_Projet5/OC_Projet5/
 
 [DB]
-dsn = 'mysql:host=localhost;dbname=projet_5_blog;charset=utf8'
+dsn = 'mysql:host=localhost:3308;dbname=blog;charset=utf8'
 login = root
 password = 
