--- a/config/dev.ini
+++ b/config/dev.ini
@@ -1,9 +1,9 @@
 ; Configuration pour le développement
 
 [Installation]
-racineWeb = /blog/OC_Projet5/
+racineWeb = /OC_Projet5/OC_Projet5/
 
 [DB]
-dsn = 'mysql:host=localhost;dbname=projet_5_blog;charset=utf8'
+dsn = 'mysql:host=localhost:3308;dbname=blog;charset=utf8'
 login = root
 password = 
